refs ITC-148: made the banner visible on IE8 and fixed some width silliness at large widths on IE8

--- a/css/ie8-and-down.css
+++ b/css/ie8-and-down.css
@@ -42,10 +42,6 @@ body h2 {
 
 /*** sidebar ***/
 
-#banner-image {
-    display:none;
-}
-
 /* main menu */
 .nav-collapse .dropdown-menu.open {
     background: rgb(98, 138, 197);
